fixing contrast

--- a/fruit_stand_sass/scss/_small.scss
+++ b/fruit_stand_sass/scss/_small.scss
@@ -21,7 +21,7 @@ header {
    
     background: white;
     padding: .5rem 1rem;
-    color: #F2921D;
+    color: #e78a1a;
     display: grid;
     grid-template-columns: 110px auto;
 }
